# dotfiles

./: .aliases  .gitignore  .rules  Brewfile  README.md  config-osx.sh  setup.sh  setup_new_mac.sh  zsh.md
ai/: lib.sh  mcp-setup.sh  setup.sh  sync-skills.sh
ai/skills/ratatui-tui/assets/templates/component-app/: Cargo.toml
ai/skills/ratatui-tui/assets/templates/component-app/src/: action.rs  app.rs  config.rs  event.rs  logging.rs  main.rs  tui.rs  ui.rs
atom/: init.sh  my-packages.txt  packages.txt
atuin/: config.toml  setup.sh
bat/: setup.sh
code/: .vscodestyles.css  settings.json
elastic/: elasticsearch-data.yml  elasticsearch-lb.yml  elasticsearch-master.yml  elasticsearch.md
fish/: config.fish  setup.sh
ghostty/: config  ghostty.rb  setup.sh
git/: gitignore_global  setup.sh  ssh-sign-sep.sh
hyper/: hyper.js
init/: com.googlecode.iterm2.plist  launchpad.yaml  lporg.yml
lmstudio/: lms.sh
macos/: setup.sh  tm.sh
nvim/: init.lua  init.vim  setup.sh
offline/: README.md  audit-after-update.sh  checksums.sha256  com.offline.pf.plist  debug-pf.sh  offline-firewall.sh  pf.offline-updates.conf  pf.offline.conf  sync-pf-tables.sh  test-detection.sh
ollama/: setup.sh
openstack/: windows.md
osx/: brew.sh  osx.sh  pencil dark.itermcolors
rust/: cargo-clean-big-targets.sh  com.blacktop.cargo-clean-big-targets.plist  install-cargo-cleaner.sh  setup.sh
sublime/: Package Control.sublime-settings  Preferences.sublime-settings
tmux/: setup.sh  tmux.conf
ubuntu/: build.sh  build_yara.sh  gnome-terminal-conf.xml  java_install.sh  ubuntu.md  (+4 more)
(+220 files in other folders)
